# archon

./: .gitignore  .pre-commit-config.yaml  .railwayignore  AGENTS.md  BUILD_LOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  KNOWN_ISSUES.md  Makefile  README.md  SESSION_HANDOFF.md  SESSION_HANDOFF_CURRENT.md  UI_PACK_SPEC.md  cleanup.sh  config.archon.yaml  conftest.py  docker-compose.observability.yml  install.cmd  install.ps1  install.sh  pyproject.toml  requirements.txt  test_swarm_level2.py
.github/workflows/: ci.yml
archon/: __init__.py  archon_cli.py  config.archon.yaml  config.py  elon.md  logging_utils.py  runtime_installer.py  validate_config.py  versioning.py
archon-coder/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
archon-coder/src/: App.svelte  app.css  app.html  main.ts
archon-ez/: Archon EZ.cmd  README.md  archon-ez.ps1
archon-ez/templates/: brief.default.md
archon/agents/: __init__.py  base_agent.py  critic.py  devils_advocate.py  fact_checker.py  researcher.py  synthesizer.py
archon/analytics/: __init__.py  aggregator.py  collector.py  dashboard_api.py
archon/api/: auth.py
archon/billing/: __init__.py  invoices.py  metering.py  models.py  pricing.py  service.py  store.py  stripe_client.py  stripe_gateway.py  webhooks.py
archon/brain/: __init__.py
archon/chat/: __init__.py  session.py
archon/cli/: base_command.py  copy.py  main.py  registry.py  renderer.py
archon/compliance/: __init__.py  audit_export.py  encryption.py  retention.py
archon/core/: __init__.py  approval_gate.py  cost_governor.py  debate_engine.py  growth_router.py  memory_store.py  multimode.py  orchestrator.py  swarm_router.py  types.py
archon/deploy/: __init__.py  cli.py  validator.py  worker.py
archon/evolution/: __init__.py  ab_tester.py  adversarial_tester.py  audit_trail.py  consciousness_log.py  cross_swarm.py  debugger.py  engine.py  genealogy.py  resurrection.py  self_prompt_engineer.py  skill_mutation.py
archon/federation/: __init__.py  auth.py  collab.py  consensus.py  pattern_sharing.py  peer_discovery.py  store.py
archon/finetune/: __init__.py  dataset_builder.py  quality_scorer.py  upload.py
archon/interfaces/: __init__.py  tui.py  whatsapp.py
archon/marketplace/: __init__.py  connect.py  payout_orchestrator.py  revenue_share.py  runner.py  sandbox.py
archon/memory/: __init__.py  embedder.py  store.py  vector_index.py
archon/mobile/: __init__.py  sync_store.py
archon/multimodal/: __init__.py  audio_input.py  image_input.py  multimodal_orchestrator.py
archon/notifications/: __init__.py  approval_notifier.py  deeplink.py  device_registry.py  push.py
archon/observability/: __init__.py  metrics.py  setup.py  tracing.py
archon/onprem/: __init__.py  compose_generator.py  helm_generator.py  validator.py
archon/partners/: __init__.py  registry.py  revenue.py  viral_loop.py
archon/providers/: __init__.py  base.py  router.py  types.py
archon/redteam/: __init__.py  adversarial.py  hardening.py  regression.py  scanner.py
archon/skills/: __init__.py  browser_automation.py  india_skills.py  india_skills_batch2.py  india_skills_batch3.py  india_skills_batch4.py  skill_creator.py  skill_executor.py  skill_registry.py  startup_funding.py  voice_assistant.py
archon/studio/: __init__.py  execution.py  index.html  package-lock.json  package.json  runtime.py  store.py  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  workflow_serializer.py
archon/swarm/: __init__.py  coordinator.py  evolution.py  memory.py  spawn_decider.py  types.py
archon/testing/: __init__.py  asgi.py
archon/tests/: conftest.py  test_analytics.py  test_api_http_auth.py  test_approval_gate.py  test_auth.py  test_billing.py  test_billing_integration.py  test_cli.py  test_cli_copy_guard.py  test_cli_drawers.py  test_community_agent.py  test_compliance.py  test_connect_onboarding.py  test_content_agent.py  test_cost_optimizer.py  (+42 more)
deploy/: docker-compose.yml  otel-collector-config.yaml
docs/: architecture.md
mobile/: .gitignore  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  main.rs.bak.20260313-153855
tests/: test_api_server.py  test_approval_gate.py  test_billing_api.py  test_cli.py  test_cost_governor.py  test_debate_engine.py  test_deploy_assets.py  test_email_agent.py  test_federation_api.py  test_global_installer.py  test_growth_swarm.py  test_growth_swarm_parallel_execution.py  test_memory_import_api.py  test_orchestrator_modes.py  test_provider_router.py  test_redteam_regression.py  test_tui.py  test_tui_onboarding.py  test_validate_config.py  test_webchat_agent.py
tools/: __init__.py  install_archon.py
(+320 files in other folders)
