[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archon"
version = "0.1.0"
description = "Autonomous Recursive Cognitive Hierarchy Orchestration Network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "PyJWT>=2.9.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.1",
  "slowapi>=0.1.9",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.9",
  "black>=24.8.0",
  "mypy>=1.11.2",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.5",
  "types-PyYAML>=6.0.12.20240917",
]

[project.scripts]
archon-server = "archon.interfaces.api.server:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["archon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["archon"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
