[package]
name = "archon-desktop"
version = "0.1.0"
description = "ARCHON desktop wrapper"
authors = ["visha"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
# Tauri v1 relies on WebKitGTK 4.0 on Linux; Ubuntu 24.04 ships 4.1 only.
# See DESKTOP.md for the Jammy (22.04) build guidance.
tauri = { version = "1", features = [ "shell-sidecar", "http-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
